--- a/index.html
+++ b/index.html
@@ -3,77 +3,35 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>css example</title>
   </head>
-
   <body>
-    <div class="container">
-      <div class="office">
-        <header>A1 OFFICE</header>
-        <h1>Complete office design, construction and management</h1>
-        <table>
-          <tr>
-            <th>HOME</th>
-            <th>SERVICES</th>
-            <th>SPACES</th>
-            <th>TEAM</th>
-            <th>ADVICE</th>
-            <th>CONTACT</th>
-          </tr>
-        </table>
-        <div class="office-contact">
-          <div class="office-contact-email">
-            <p>1300 726 566</p>
-            <p>sales@a1office.com.au</p>
-          </div>
-          <div class="office-contact-address">
-            <p>Melbourne</p>
-            <p>1374 North Road</p>
-            <p>Huntingdale VIC 3116</p>
-          </div>
-          <div class="office-contact-address">
-            <p>Sydney</p>
-            <p>Level 32 101 Miller Street</p>
-            <p>North Sydney NSW 2060</p>
-          </div>
-          <div class="office-contact-language">
-            <p>EN | 中</p>
-          </div>
-        </div>
-      </div>
-      <div class="home">
-        <header>HOME</header>
-        <h1>Think Inside the Square.</h1>
-        <p>
-          At A1 Office, we design, construct, project manage, and maintain
-          office spaces across a diverse range of industries.
-        </p>
-        <p>
-          We bring 25 years' experience in the industry to help you with every
-          aspect of the office fit out-from design through to construction, and
-          everything beyond.
-        </p>
-      </div>
-      <div class="service">
-        <header>SERVICES</header>
-        <h1>Everything under one roof.</h1>
-      </div>
-      <div class="img1"></div>
-      <div class="img2">
-        <div class="img2-1"></div>
-        <div class="img2-2"></div>
-        <div class="img2-3"></div>
-        <div class="img2-4"></div>
-        <div class="img2-5"></div>
-        <div class="img2-6"></div>
-      </div>
-      <div class="img3">
-        <div class="img3-1"></div>
-        <div class="img3-2"></div>
-        <div class="img3-3"></div>
-        <div class="img3-4"></div>
-      </div>
-    </div>
+    <h1>HTML/CSS examples</h1>
+    <ul>
+      <li>
+        <a href="poster.html">Paris Poster</a>
+      </li>
+      <li>
+        <a href="poster2.html">bad religion Poster</a>
+      </li>
+      <li>
+        <a href="poster3.html">Ostrich Poster (grid)</a>
+      </li>
+      <li>
+        <a href="forewords.html">Foreword & Contributors</a>
+      </li>
+      <li>
+        <a href="flyer.html">Concert Flyer</a>
+      </li>
+      <li>
+        <a href="flyer2.html">Curry Cafe Flyer</a>
+      </li>
+      <li>
+        <a href="gallery.html">Art Gallery</a>
+      </li>
+      <li>
+        <a href="schedule.html">Concert Schedule</a>
+      </li>
+    </ul>
   </body>
 </html>
